--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Listening to music and playing sports</p>
       <h1>What's your dream job?</h1>
-      <p>Senior Software Enfineer or Product Manager</p>
+      <p>Senior Software Engineer or Product Manager</p>
       <h1>Where do you live?</h1>
       <p>Seattle, Washington</p>
       <h1>Why do you want to be a web developer?</h1>
